# buckyball

arch/src/main/scala/examples/toy/balldomain/: DISA.scala  DomainDecoder.scala
arch/src/main/scala/examples/toy/balldomain/bbus/: busRegister.scala
arch/src/main/scala/examples/toy/balldomain/relu/: ReluBall.scala
arch/src/main/scala/examples/toy/balldomain/rs/: rsRegister.scala
arch/src/main/scala/prototype/relu/: Relu.scala
arch/src/test/scala/relu/: ReluBallSmokeSpec.scala
bb-tests/workloads/lib/bbhw/isa/: 35_relu.c  CMakeLists.txt  isa.c  isa.h
bb-tests/workloads/src/CTest/: CMakeLists.txt  relu_test.c
docs/bb-note/src/tutorial/: tutorial.md
